@@ -65,13 +65,10 @@
       {\csname pgf@sh@bg@#1\endcsname#5}%
       \@ifundefined{pgf@sh@fbg@#1}{}
       {{\pgfscope\csname pgf@sh@fbg@#1\endcsname\endpgfscope}}%
-      \pgfsys@beginscope%
       {%
         \pgftransformshift{\pgf@sh@reanchor{#1}{text}}%
-        \pgflowlevelsynccm%
-        \pgfqbox{\pgfshapebox}%
+        \pgfqboxsynced{\pgfshapebox}%
       }%
-      \pgfsys@endscope%
       \@ifundefined{pgf@sh@bfg@#1}{}%
       {{\pgfscope\csname pgf@sh@bfg@#1\endcsname\endpgfscope}}%
       \@ifundefined{pgf@sh@fg@#1}{}%
