@@ -781,7 +781,7 @@
 % % One complete sine in the interval [0,\pi]
 % \pgfpathmoveto{\pgfpointorigin}
 % \pgfpathsine{\pgfpoint{1.57cm}{1cm}}
-% \pgfpathcosine{\pgfpoint{3.141cm}{0cmcm}}
+% \pgfpathcosine{\pgfpoint{3.141cm}{0cm}}
 
 \def\pgfpathsine#1{%
   {%
@@ -806,7 +806,7 @@
 % % One complete sine in the interval [0,\pi]
 % \pgfpathmoveto{\pgfpointorigin}
 % \pgfpathsine{\pgfpoint{1.57cm}{1cm}}
-% \pgfpathcosine{\pgfpoint{3.141cm}{0cmcm}}
+% \pgfpathcosine{\pgfpoint{3.141cm}{0cm}}
 
 \def\pgfpathcosine#1{%
   {%
