@@ -53,6 +53,42 @@
 } 
 
 
+% Insert a box that can contain normal TeX text at the origin, but
+% with the current coordinate transformation matrix synced with the
+% low-level transformation matrix.
+% 
+% #1 = box of width/height and depth 0pt
+%
+% In essence, this command does the same as if you first said
+% \pgflowlevelsynccm and then \pgfqbox. However, pgf will use a
+% ``TeX-translation'' for the translation part of the transformation
+% cm. This will ensure that hyperlinks ``survive'' at least
+% translations. 
+% 
+% Example:
+%
+% \pgfqboxsynced{\mybox}
+
+\def\pgfqboxsynced#1{%
+  {%
+    \pgfsys@beginscope%
+    \setbox\pgf@hbox=\hbox{%
+      \hskip\pgf@pt@x%
+      \raise\pgf@pt@y\hbox{%
+        \pgf@pt@x=0pt%
+        \pgf@pt@y=0pt%
+        \pgflowlevelsynccm% 
+        \pgfsys@hbox#1}%
+      \hss%
+    }%
+    \wd\pgf@hbox=0pt%
+    \ht\pgf@hbox=0pt%
+    \dp\pgf@hbox=0pt%
+    \box\pgf@hbox%
+    \pgfsys@endscope%
+  }%
+} 
+
 
 
 % Puts some text in a box and inserts it with the current
@@ -88,7 +124,7 @@
   \pgf@protocolsizes{\pgf@x}{\pgf@y}%
   \pgf@process{\pgfpointtransformed{\pgfpoint{\wd\pgf@hbox}{\ht\pgf@hbox}}}%
   \pgf@protocolsizes{\pgf@x}{\pgf@y}%
-  {\pgfscope\pgflowlevelsynccm\pgfqbox{\pgf@hbox}\endpgfscope}%
+  \pgfqboxsynced{\pgf@hbox}%
   }%
 }
 
