@@ -17,6 +17,21 @@
 
 
 
+% % snake snake
+% %
+% % This snake produces a hopefully optically pleasing squiggly snake. 
+% %
+% % Parameters: \pgfsnakesegmentamplitude, \pgfsnakesegmentlength
+
+% \pgfdeclaresnake{snake}{initial}
+% {
+%   \state{final}
+%   { \pgfpathlineto{\pgfpoint{\pgfsnakeremainingdistance}{0pt}} }
+% }
+
+
+
+
 % zigzag snake
 %
 % Parameters: \pgfsnakesegmentamplitude, \pgfsnakesegmentlength
