@@ -51,7 +51,9 @@
   \special{pdf: put @pgfopacities << #1 >>}%
   \special{pdf: put @resources << /ExtGState @pgfopacities >>}%
 }
-
+\def\pgf@sys@pdf@readdtopageresources#1{%
+  \special{pdf: put @resources << /ExtGState @pgfopacities >>}%
+}
 
 \def\pgfsys@imagesuffixlist{pdf:jpg:jpeg:png}
 \def\pgfsys@horishading#1#2#3{%
