@@ -146,6 +146,7 @@
     /pgfc{newpath @endspecial pgfpd}B %close
     /pgfsd{globaldict /pgfdelta /delta where {pop delta} {0} ifelse put}B% save delta
     /pgfpd{/delta globaldict /pgfdelta get def}B % put delta
+    /.setopacityalpha where {pop} {/.setopacityalpha{pop}def} ifelse % install .setopacityalpha 
     end
     }
   
